--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "npm install concurrently --save-dev",
     "json:server": "json-server --watch db.json",
     "json:server:routes": "json-server --watch db.json --routes routes.json",
-    "start:commands": "concurrently \"ng serve\" \"json-server --watch db.json --routes routes.json\""
+    "deploy": "concurrently \"ng serve\" \"json-server --watch db.json --routes routes.json\""
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "angular-cli-ghpages": "^1.0.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "json-server": "^0.17.3",
