--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "gerenciador-jogos",
   "version": "0.0.0",
+  "engines": {
+    "node": "18.16.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "postinstall": "npm install concurrently --save-dev",
