--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@angular/cli": "~16.0.3",
+    "@angular/compiler-cli": "^16.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.3",
-    "@angular/cli": "~16.0.3",
-    "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "concurrently": "^8.2.0",
     "jasmine-core": "~4.6.0",
