--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.3",
+    "@angular/cli": "~16.0.3",
+    "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "concurrently": "^8.2.0",
     "jasmine-core": "~4.6.0",
