--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0",
     "@angular/cli": "~16.0.3",
-    "@angular/compiler-cli": "^16.0.0"
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular-devkit/build-angular": "^16.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.3",
