--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^16.0.3",
     "@angular/animations": "^16.0.0",
+    "@angular/cli": "~16.0.3",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
@@ -32,10 +35,7 @@
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "@angular/cli": "~16.0.3",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular-devkit/build-angular": "^16.0.3"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.3",
