--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test": "ng test",
     "postinstall": "npm install concurrently --save-dev",
     "json:server": "json-server --watch db.json",
-    "json:server:routes": "json-server --watch db.json --routes routes.json",
-    "heroku-postbuild": "npm install -g @angular/cli && ng build --configuration production"
+    "json:server:routes": "json-server --watch db.json --routes routes.json"
   },
   "private": true,
   "dependencies": {
